# photoray

./: CMakeLists.txt
parser/: phoray.c  phoray.h  phoray.peg
src/: component.c  component.h  main.c  parser.c  parser.h  registry.c  registry.h  scene.c  scene.h
src/math/: cmatrix.c  cmatrix.h  complex.c  complex.h  matrix.c  matrix.h  scattering_matrix.c  scattering_matrix.h  vector.c  vector.h
tests/: parser_test.c
